--- a/public/index.html
+++ b/public/index.html
@@ -47,5 +47,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/f42833012d.js" crossorigin="anonymous"></script>
   </body>
 </html>
